// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auditLinks document has some empty links 1`] = `
Object {
  "logs": Array [
    Array [
      "Document has 3 links",
      Object {
        "length": 3,
      },
    ],
    Array [
      Array [
        "Empty \\"a\\" elements count in dom",
        Object {
          "length": 5,
        },
      ],
    ],
  ],
  "name": "links in dom",
  "tables": Array [],
  "warnings": Array [
    "Document has empty links",
  ],
}
`;

exports[`auditLinks document is ok 1`] = `
Object {
  "logs": Array [
    Array [
      "Document has 3 links",
      Object {
        "length": 3,
      },
    ],
  ],
  "name": "links in dom",
  "tables": Array [],
  "warnings": Array [],
}
`;
